# noesis_bevy

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  PHASE_5_PLAN.md  README.md  RELEASING.md  TODO.md  build.rs  release.toml
.claude/skills/prune-comments/: SKILL.md
.claude/worktrees/: noesis_runtime
.config/: nextest.toml
.github/workflows/: ci.yml  release.yml
assets/: hello_text.xaml  test.xaml
assets/databinding/: solar_system.xaml
assets/phase5/: 01_button_hover.xaml  02_button_click.xaml  04_textbox.xaml  05_resize.xaml  08_radial.xaml
assets/viewer_samples/: 03_scroll.xaml  06_storyboard_idle.xaml  07_touch.xaml  09_tiled_pattern.xaml  10_image_brush.xaml
derive/: Cargo.toml
derive/src/: lib.rs
docs/: PHASE_5_PLAN.md  fable-audit.txt
examples/: bevy_wgpu_bridge.rs  commands.rs  controls_gallery.rs  databinding.rs  ecs_ui.rs  phase4_visual.rs  scoreboard.rs  xaml_viewer.rs
src/: animation.rs  bake.rs  binding.rs  brushes.rs  classes.rs  commands.rs  diagnostics.rs  dp.rs  events.rs  focus.rs  focus_input.rs  font.rs  geometry.rs  headless.rs  image.rs  imaging.rs  inlines.rs  input.rs  integration.rs  items.rs  layout.rs  lib.rs  list.rs  markup.rs  panel.rs  plain_vm.rs  reconcile.rs  render.rs  resources.rs  routed_events.rs  shapes.rs  styles.rs  svg.rs  text.rs  theme.rs  transforms.rs  transforms3d.rs  typography.rs  ui.rs  viewmodel.rs  (+4 more)
src/input/: key_map.rs
src/render_device/: mod.rs  pipeline.rs  shader_defines.rs  shader_preproc.rs  vertex_layout.rs  wgpu_device.rs
src/render_device/shaders/: noesis.wgsl
tests/: README.md  headless_app_animation.rs  headless_app_binding.rs  headless_app_binding_rebuild.rs  headless_app_bridges.rs  headless_app_brushes.rs  headless_app_commands.rs  headless_app_diagnostics.rs  headless_app_focus_control_drain.rs  headless_app_focus_input.rs  headless_app_focus_predict_remove.rs  headless_app_hot_reload.rs  headless_app_imaging.rs  headless_app_inlines.rs  headless_app_inlines_extend.rs  headless_app_integration.rs  headless_app_matrix3d.rs  headless_app_panel.rs  headless_app_plain_vm.rs  headless_app_plain_vm_two_views.rs  headless_app_props.rs  headless_app_resources.rs  headless_app_resources_chain.rs  headless_app_resources_mixed.rs  headless_app_routed_events.rs  headless_app_shapes.rs  headless_app_styles.rs  headless_app_styles_deep.rs  headless_app_svg.rs  headless_app_transforms.rs  headless_app_transforms3d.rs  headless_app_typed_items.rs  headless_app_typography.rs  headless_app_visual_state.rs  headless_bake_label.rs  headless_binding_removal_reap.rs  headless_collection_view.rs  headless_component_removal_reap.rs  headless_controls_gallery.rs  headless_databinding.rs  (+46 more)
tests/common/: mod.rs
tests/headless_suite/: headless_app_animation.rs  headless_app_binding.rs  headless_app_binding_rebuild.rs  headless_app_bridges.rs  headless_app_brushes.rs  headless_app_commands.rs  headless_app_diagnostics.rs  headless_app_focus_control_drain.rs  headless_app_focus_input.rs  headless_app_focus_predict_remove.rs  headless_app_hot_reload.rs  headless_app_imaging.rs  headless_app_inlines.rs  headless_app_inlines_extend.rs  headless_app_integration.rs  headless_app_matrix3d.rs  headless_app_panel.rs  headless_app_plain_vm.rs  headless_app_plain_vm_two_views.rs  headless_app_props.rs  headless_app_resources.rs  headless_app_resources_chain.rs  headless_app_resources_mixed.rs  headless_app_routed_events.rs  headless_app_shapes.rs  headless_app_styles.rs  headless_app_styles_deep.rs  headless_app_svg.rs  headless_app_transforms.rs  headless_app_transforms3d.rs  headless_app_typed_items.rs  headless_app_typography.rs  headless_app_visual_state.rs  headless_binding_removal_reap.rs  headless_collection_view.rs  headless_component_removal_reap.rs  headless_despawn_teardown.rs  headless_dp_access.rs  headless_ecs_ui_events.rs  headless_ecs_ui_list.rs  (+23 more)
tests/render_suite/: headless_bake_label.rs  headless_compositing.rs  headless_intermediate_ghost.rs  headless_intermediate_ghost_removed.rs  headless_teardown.rs  main.rs
tests/wgpu_suite/: headless_offscreen_brush.rs  headless_xaml.rs  headless_xaml_nested.rs  main.rs  wgpu_effects.rs  wgpu_first_triangle.rs  wgpu_geometry_stream.rs  wgpu_multi_shader.rs  wgpu_offscreen_rt.rs  wgpu_pattern.rs  wgpu_pattern_wrap.rs  wgpu_ppaa_blit.rs  wgpu_radial.rs  wgpu_sdf_lcd.rs  wgpu_shadow_blur.rs  wgpu_stencil_clip.rs  wgpu_uniform_ring.rs
