[package]
name = "dm_noesis_bevy"
version = "0.1.0"
edition = "2024"
description = "Bevy plugin that drives the Noesis GUI Native SDK and renders into Bevy via wgpu compositing."
repository = "https://github.com/dead-money/dm_noesis_bevy"
license = "MIT"
publish = false

[dependencies]
# `debug` surfaces system / resource names in panic messages — cheap diagnostic
# help, small compile-time cost. Drop once the plugin is stable if needed.
bevy = { version = "0.18", features = ["debug"] }
bevy_render = "0.18"
bytemuck = { version = "1.25", features = ["derive"] }
dm_noesis_bevy_derive = { path = "./derive" }
noesis_runtime = { path = "../noesis_runtime" }
# Image decoding for the ImageBrush loader (Phase 4.E). PNG / JPEG cover the
# SDK samples (BgTile.png, Aladin/aladin-atlas.png). Add more formats here as
# scenes demand them.
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
thiserror = "2"
# Pinned to match Bevy 0.18's transitive wgpu version. Cargo dedupes them
# into a single crate, so RenderDevice traits remain interchangeable between
# this crate's wgpu types and Bevy's.
wgpu = "27.0.1"

[dev-dependencies]
image = { version = "0.25", default-features = false, features = ["png"] }
pollster = "0.4"

[lints.rust]
unsafe_code = "forbid"

# Curated lint set shared with `../noesis_runtime` (originally from
# magicsmoke / hommlet-rust). Prefer this to a blanket `pedantic = warn` —
# opting into specific lints keeps the signal-to-noise ratio high and makes
# intent obvious. Unlike the runtime, this crate keeps `unsafe_code = "forbid"`
# (above): it's the integration layer, not the FFI quarantine — so the runtime's
# FFI-only `mem_forget` allowance is dropped here.
[lints.clippy]
type_complexity = "allow"
too_many_arguments = "allow"
indexing_slicing = "allow"
many_single_char_names = "allow"

# `panic` covers the build script's config-error exits and unreachable enum
# guards; `float_cmp` is exact dedup of already-quantized scale/flag values
# before re-issuing an FFI call (see `render::NoesisRenderState::apply_live_flags`).
panic = "allow"
float_cmp = "allow"

# Correctness
unnecessary_cast = "warn"
as_underscore = "warn"
ptr_as_ptr = "warn"
clone_on_ref_ptr = "warn"
cloned_instead_of_copied = "warn"
explicit_iter_loop = "warn"
explicit_into_iter_loop = "warn"
invalid_upcast_comparisons = "warn"
mixed_read_write_in_expression = "warn"
index_refutable_slice = "warn"
string_slice = "warn"

# Style
doc_markdown = "warn"
equatable_if_let = "warn"
if_not_else = "warn"
implicit_saturating_sub = "warn"
inconsistent_struct_constructor = "warn"
mismatching_type_param_order = "warn"
branches_sharing_code = "warn"
manual_assert = "warn"
mut_mut = "warn"
needless_continue = "warn"
option_option = "warn"
range_minus_one = "warn"
range_plus_one = "warn"
redundant_else = "warn"
ref_option_ref = "warn"
unnested_or_patterns = "warn"
unneeded_field_pattern = "warn"
zero_sized_map_values = "warn"

# Perf
inefficient_to_string = "warn"
large_types_passed_by_value = "warn"

# Reminders
dbg_macro = "warn"
todo = "warn"
unimplemented = "warn"

# Cargo
wildcard_dependencies = "warn"

[[example]]
name = "phase4_visual"
path = "examples/phase4_visual.rs"

[[example]]
name = "bevy_wgpu_bridge"
path = "examples/bevy_wgpu_bridge.rs"

[[example]]
name = "xaml_viewer"
path = "examples/xaml_viewer.rs"

[[example]]
name = "controls_gallery"
path = "examples/controls_gallery.rs"

[[example]]
name = "databinding"
path = "examples/databinding.rs"
