[package]
name = "noesis_bevy"
version = "0.11.0"
edition = "2024"
rust-version = "1.87"
authors = ["Brandon Reinhart <brandon@deadmoney.gg>"]
description = "Bevy plugin that drives the Noesis GUI Native SDK and renders its UIs into a Bevy frame via wgpu compositing."
repository = "https://github.com/dead-money/noesis_bevy"
documentation = "https://docs.rs/noesis_bevy"
license = "MIT"
readme = "README.md"
keywords = ["bevy", "noesis", "xaml", "gui", "ui"]
categories = ["gui", "game-development", "graphics"]
# Dev-only files that consumers of the published crate don't need. docs/ stays
# (the README image) and assets/ + examples/ stay (the runnable samples).
exclude = [".github/", ".claude/", "CLAUDE.md", "TODO.md", "RELEASING.md", "release.toml"]

# docs.rs has no Noesis SDK, so build.rs short-circuits on the DOCS_RS env var
# and rustdoc builds the API without linking.
[package.metadata.docs.rs]
# No SDK on docs.rs; the doc build needs nothing extra, but pin the target so the
# rpath branch in build.rs (Linux-only) is exercised consistently.
default-target = "x86_64-unknown-linux-gnu"

[features]
default = []
# Surface system / resource names in Bevy panic messages. A development
# diagnostic; off by default so published consumers don't inherit Bevy's debug
# overhead. Enable with `features = ["debug"]`.
debug = ["bevy/debug"]

[dependencies]
bevy = "0.18"
bevy_render = "0.18"
bytemuck = { version = "1.25", features = ["derive"] }
# The derive crate ships in this repo and releases in lockstep (path for local
# dev, version for the published crate).
noesis_bevy_derive = { path = "./derive", version = "0.11" }
# The public crate from crates.io. This branch needs 0.11 (the ECS-UI FFI). Until
# 0.11 is published, the `[patch.crates-io]` override below builds against the
# sibling checkout; remove it once 0.11 is on crates.io (see RELEASING.md).
noesis_runtime = "0.11"
# Image decoding for the ImageBrush loader. Add formats here as scenes demand.
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
# Insertion-ordered map: the entity-keyed list reconciler (Primitive 2) keeps its
# row instances in collection order, so it needs index-positioned insert / remove /
# move alongside O(1) Entity lookup.
indexmap = "2"
thiserror = "2"
# Pinned to match Bevy 0.18's transitive wgpu version. Cargo dedupes them into a
# single crate, so RenderDevice traits remain interchangeable between this
# crate's wgpu types and Bevy's.
wgpu = "27.0.1"

[dev-dependencies]
image = { version = "0.25", default-features = false, features = ["png"] }
pollster = "0.4"

[lints.rust]
unsafe_code = "forbid"

# Curated lint set shared with `../noesis_runtime`. We opt into specific lints
# rather than a blanket `pedantic = warn`, which keeps the signal-to-noise ratio
# high and makes intent obvious. Unlike the runtime, this crate keeps
# `unsafe_code = "forbid"` (above) — it's the integration layer, not the FFI
# quarantine — so the runtime's FFI-only `mem_forget` allowance is dropped here.
[lints.clippy]
type_complexity = "allow"
too_many_arguments = "allow"
indexing_slicing = "allow"
many_single_char_names = "allow"

# `panic` covers the build script's config-error exits and unreachable enum
# guards; `float_cmp` is exact dedup of already-quantized scale/flag values
# before re-issuing an FFI call (see `render::NoesisRenderState::apply_live_flags`).
panic = "allow"
float_cmp = "allow"

# Correctness
unnecessary_cast = "warn"
as_underscore = "warn"
ptr_as_ptr = "warn"
clone_on_ref_ptr = "warn"
cloned_instead_of_copied = "warn"
explicit_iter_loop = "warn"
explicit_into_iter_loop = "warn"
invalid_upcast_comparisons = "warn"
mixed_read_write_in_expression = "warn"
index_refutable_slice = "warn"
string_slice = "warn"

# Style
doc_markdown = "warn"
equatable_if_let = "warn"
if_not_else = "warn"
implicit_saturating_sub = "warn"
inconsistent_struct_constructor = "warn"
mismatching_type_param_order = "warn"
branches_sharing_code = "warn"
manual_assert = "warn"
mut_mut = "warn"
needless_continue = "warn"
option_option = "warn"
range_minus_one = "warn"
range_plus_one = "warn"
redundant_else = "warn"
ref_option_ref = "warn"
unnested_or_patterns = "warn"
unneeded_field_pattern = "warn"
zero_sized_map_values = "warn"

# Perf
inefficient_to_string = "warn"
large_types_passed_by_value = "warn"

# Reminders
dbg_macro = "warn"
todo = "warn"
unimplemented = "warn"

# Cargo
wildcard_dependencies = "warn"

[[example]]
name = "xaml_viewer"
path = "examples/xaml_viewer.rs"

[[example]]
name = "scoreboard"
path = "examples/scoreboard.rs"

[[example]]
name = "ecs_ui"
path = "examples/ecs_ui.rs"
