[package]
name = "noesis_bevy_derive"
version = "0.12.0"
edition = "2024"
rust-version = "1.87"
authors = ["Brandon Reinhart <brandon@deadmoney.gg>"]
description = "derive(NoesisViewModel) for noesis_bevy: bind a plain Rust struct to XAML by field name."
repository = "https://github.com/dead-money/noesis_bevy"
license = "MIT"
keywords = ["bevy", "noesis", "xaml", "derive", "macro"]
categories = ["gui", "game-development"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"

[lints.rust]
unsafe_code = "forbid"
